# azure-board

./: README.md  noxfile.py  pyproject.toml  some_code.py  states.json
src/azure_board/: ab.py  cli.py  client.py  config.py  interactive.py  interactive.tcss  setup_logging.py
src/baringa_board/: cli.py  client.py  config.py  fillers.py
tests/: __init__.py  test_cli.py  test_client.py
tests/board_settings/: boards.json
tests/cassettes/test_client/: test_create_item.yaml
tests/test_board_settings/: boards.json
