[project]
name = "baringa-board"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.2",
    "rich>=13.9.4",
    "pydantic>=2.10.2",
    "keyring>=25.5.0",
    "questionary>=2.0.1",
    "clipstick>=0.6.1",
    "pydantic-settings>=2.6.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 110

[tool.uv]
dev-dependencies = [
    "pytest-recording>=0.13.2",
    "pytest>=8.3.3",
]
