[build-system]
build-backend = "hatchling.build"

requires = [ "hatchling" ]

[project]
name = "azure-board"
version = "0.3.5"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "clipstick>=0.6.1",
  "httpx>=0.27.2",
  "keyring>=25.5",
  "pydantic>=2.10.2",
  "pydantic-settings>=2.6.1",
  "rich>=13.9.4",
  "textual>=0.88.1",
  "ticklist==0.5.1",
]

scripts.ab = "azure_board.cli:run"

[tool.ruff]
line-length = 110

[tool.uv]
dev-dependencies = [
  "pytest-recording>=0.13.2",
  "pytest>=8.3.3",
  "pytest-env>=1.1.5",
  "pyproject-fmt>=2.5.0",
  "ruff>=0.8.1",
  "mypy>=1.13.0",
]
